--- a/Test.html
+++ b/Test.html
@@ -1,3 +1,15 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey, I'm a paragraphy element. Cool huh?</p>
-<a href=""https://google.com" target="_blank" title="Click me to go to google.">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+    <h1>Hey. I'm a big heading</h1>
+    <p>Hey, I'm a <b>paragraph</b> element. Cool huh?</p>
+    <a href="https://google.com" target="_blank" title="Let's go to google.">Click me! I'm a link!</a> <br>
+    <p>My name is: <br>
+        Doggy Dog
+    </p>
+    <img src="img/dog.jpeg">
+</body>
+</html>
