added css styling for the character's website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <title>Lightning McQueen</title>
     <link rel="icon" href="img/McQueen-Avatar.jpeg">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
     <!-- header element -->
     <header>
-        <img src="img/McQueen-Avatar.jpeg">
+        <img src="img/McQueen-Avatar3.png">
         <h1>Lightning McQueen</h1>
     </header>
 
@@ -16,10 +18,10 @@
         <h2>About Lightning</h2>
         <p>Lightning McQueen is a legendary red racecar who won multiple Piston Cups and earned the respect of his fellow racers through his determination and growth.</p>
         <img src="img/McQueen-Big.jpeg">
-        <p>Lightning and his cups</p>
+        <p class="caption">Lightning on the track</p>
         
         <!-- Characteristics -->
-        <p>McQueen's Characteristics</p>
+        <h2>McQueen's Characteristics</h2>
         <ol>
             <li>He's got fast wheels</li>
             <li>His enemies marvel his speed</li>
